templates/azure/network.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/routeTables",
            "apiVersion": "2020-05-01",
            "name": "cluster-route",
            "location": "[resourceGroup().location]",
            "tags": {
                "type": "core"
            },
            "properties": {
                "disableBgpRoutePropagation": true,
                "routes": [
                    {
                        "name": "cluster2-def",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "10.110.1.200"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/routeTables/routes",
            "apiVersion": "2020-05-01",
            "name": "cluster-route/cluster2-def",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables', 'cluster-route')]"
            ],
            "properties": {
                "addressPrefix": "0.0.0.0/0",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.110.1.200"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-05-01",
            "name": "cluster",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables', 'cluster-route')]"
            ],
            "tags": {
                "type": "core"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.110.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "cluster-dmz",
                        "properties": {
                            "addressPrefix": "10.110.0.0/24",
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                        "[resourceGroup().location]"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "cluster-pri1",
                        "properties": {
                            "addressPrefix": "10.110.1.0/24",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', 'cluster-route')]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                        "[resourceGroup().location]"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-05-01",
            "name": "cluster/cluster-dmz",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', 'cluster')]"
            ],
            "properties": {
                "addressPrefix": "10.110.0.0/24",
                "serviceEndpoints": [
                    {
                        "service": "Microsoft.Storage",
                        "locations": [
                            "[resourceGroup().location]"
                        ]
                    }
                ],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-05-01",
            "name": "cluster/cluster-pri1",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', 'cluster')]",
                "[resourceId('Microsoft.Network/routeTables', 'cluster-route')]"
            ],
            "properties": {
                "addressPrefix": "10.110.1.0/24",
                "routeTable": {
                    "id": "[resourceId('Microsoft.Network/routeTables', 'cluster-route')]"
                },
                "serviceEndpoints": [
                    {
                        "service": "Microsoft.Storage",
                        "locations": [
                            "[resourceGroup().location]"
                        ]
                    }
                ],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
    {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "cluster-dmz",
            "location": "[resourceGroup().location]",
            "tags": {
                "type": "core"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH_from_alces",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "213.83.69.6/32",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "SSH_from_alcesFC",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "34.240.100.113/32",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "VPN",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "0.0.0.0/0",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "cluster-private",
            "location": "[resourceGroup().location]",
            "tags": {
                "type": "core"
            },
            "properties": {
                "securityRules": []
            }
        }
    ]
}
